# tinyDLM

./: $  .gitignore  :wa  CMakeLists.txt  README.md  addSan.txt  compile.txt  compileMacOS.txt  compile_command.txt  curlpp_runtime_error.txt  del_win_log.txt  dlManagerUI.cpp  dlManagerUI.hpp  entitlements.xml  errors.txt  install.sh  newwin.txt  prout.txt  tinyDLM  tree.md
Controller/include/: Controller.hxx
Controller/source/: Controller.cxx
Curses/include/: CursesMenu.hxx  CursesWindow.hxx
Curses/source/: CursesForm.cxx  CursesMenu.cxx  CursesWindow.cxx
DownloaderCore/include/: DownloaderCore.hxx  download.hxx
DownloaderCore/source/: DownloaderCore.cxx
Error/include/: Error.hxx
Log/include/: Log.hxx
Settings/include/: Settings.hxx
Settings/source/: Settings.cxx
UI/include/: UI.hxx  dlManagerUI.hpp  dlManagerUI.hxx
UI/include/helper/: userInputCheck.hpp
UI/source/: UI.cxx  dlManagerUI.cpp  dlManagerUI.cxx
UI/source/helper/: userInputCheck.cpp
UIHelpers/: cursesForm.cpp  cursesForm.hpp  cursesMenu.cpp  cursesMenu.hpp  cursesWindow.cpp  cursesWindow.hpp  fieldSize.cpp  point.cpp  winSize.cpp
app/: tinyDLM
app/tinyDLM.dSYM/Contents/: Info.plist
cmake/: FindCURLPP.cmake  FindcURLpp.cmake  LibFindMacros.cmake
compile/: compileDebug.txt  compileMacOS.txt  compileSan.txt
connector/include/: Connector.hxx
connector/source/: Connector.cxx
controller/source/: controller.cxx
curses/include/: cursesForm.hpp  cursesForm.hxx  cursesMenu.hpp  cursesMenu.hxx  cursesWindow.hpp  cursesWindow.hxx
curses/source/: cursesForm.cpp  cursesForm.cxx  cursesMenu.cpp  cursesMenu.cxx  cursesWindow.cpp  cursesWindow.cxx
curses/source/helper/: fieldSize.cpp  fieldSize.cxx  point.cpp  point.cxx  winSize.cpp  winSize.cxx
dev/: BinaryTree.cxx  BinaryTree.hxx  dupFilenameChecker  duplicateFilenameChecker.cxx
dialogs/: dialogs.cpp  dialogs.hpp
dialogs/include/: dialogs.hpp  dialogs.hxx
dialogs/source/: dialogs.cpp  dialogs.cxx
dlManager/: dlManager.cpp  dlManager.hpp  download.hpp
dlManager/include/: dlManager.hpp  dlManager.hxx  download.hpp
dlManager/source/: dlManager.cpp  dlManager.cxx
dlManagerController/: dlManagerController.cpp  dlManagerController.hpp
dlManagerController/include/: dlManagerController.hpp  dlManagerController.hxx
dlManagerController/include/helper/: flipMap.hpp  stringify.hpp
dlManagerController/source/: dlManagerController.cpp  dlManagerController.cxx
dlManagerController/source/helper/: stringify.cpp
downloads/: azefzef  zef  zefzef  zefzezef
helper/include/: BinaryTree.hxx  Environment.hxx  FileIO.hxx  Node.hxx  flipMap.hxx  futureState.hxx  stringify.hpp  stringify.hxx  userInputCheck.hpp  userInputCheck.hxx
helper/source/: BinaryTree.cxx  stringify.cpp  stringify.cxx  userInputCheck.cpp  userInputCheck.cxx
helperFunctions/: UIhelperFunc.cpp  UIhelperFunc.hpp  miscHelperFunc.hpp
logs/curlpp/: curlpp_runtime_error.txt
main/: main  main.cpp  tinyDLM.cxx  tinyDLM.hxx  tinyDLM.hxx.in  tinydlm.cxx
tinyDLM.dSYM/Contents/Resources/DWARF/: tinyDLM
